Hash codes and rootNewton update.
Added implementations for hashCode() for all classes, and updated input validation for rootNewton() to specify positive values only.